# ChangeLog for app-misc/mc
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/mc/ChangeLog,v 1.232 2011/12/15 17:17:01 slyfox Exp $

*mc-4.8.1 (15 Dec 2011)
*mc-4.7.5.6 (15 Dec 2011)

  15 Dec 2011; Sergei Trofimovich <slyfox@gentoo.org> +mc-4.7.5.6.ebuild,
  +mc-4.8.1.ebuild:
  Version bump stable and development branches.

*mc-4.8.0-r2 (30 Nov 2011)

  30 Nov 2011; Sergei Trofimovich <slyfox@gentoo.org> +mc-4.8.0-r2.ebuild,
  +files/mc-4.8.0-fix-ftp-spaces.patch:
  Fix annoying leading spaces in ftp directories (upstream patch)

  11 Nov 2011; Naohiro Aota <naota@gentoo.org> mc-4.7.5.3.ebuild,
  mc-4.7.5.5.ebuild, mc-4.8.0.ebuild, mc-4.8.0-r1.ebuild:
  Apply Bug #376943 fix to all related ebuilds

  08 Nov 2011; Naohiro Aota <naota@gentoo.org> mc-4.7.5.2.ebuild:
  Install cons.saver only on Linux. Bug #376943

*mc-4.8.0-r1 (01 Nov 2011)

  01 Nov 2011; Alex Alexander <wired@gentoo.org> +mc-4.8.0-r1.ebuild,
  metadata.xml:
  new use flag: mclib. install NEWS file, bug 389143

  21 Oct 2011; Sergei Trofimovich <slyfox@gentoo.org> metadata.xml:
  Added myself to maintainers.

  21 Oct 2011; Sergei Trofimovich <slyfox@gentoo.org> mc-4.8.0.ebuild,
  +files/mc-4.8.0-fix-nls.patch:
  Fixed build failure in USE=-nls case by Nikos Chantziaras (bug #387949)

*mc-4.8.0 (20 Oct 2011)
*mc-4.7.5.5 (20 Oct 2011)

  20 Oct 2011; Sergei Trofimovich <slyfox@gentoo.org> +mc-4.7.5.5.ebuild,
  +mc-4.8.0.ebuild:
  Version bump (requested by Anton Kochkov in bug #387883)

  14 Aug 2011; Fabian Groffen <grobian@gentoo.org> mc-4.7.5.3.ebuild:
  Allow linkage to succeed on Solaris, bug #378699 by Daniel Vergien

  07 Aug 2011; Raúl Porcel <armin76@gentoo.org> mc-4.7.5.2.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #373225

  01 Aug 2011; Markus Meier <maekke@gentoo.org> mc-4.7.5.2.ebuild:
  amd64/x86 stable, bug #373225

  31 Jul 2011; Jeroen Roovers <jer@gentoo.org> mc-4.7.5.2.ebuild:
  Stable for HPPA (bug #373225).
