@@ -1,6 +1,10 @@
 # ChangeLog for app-misc/mc
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/mc/ChangeLog,v 1.232 2011/12/15 17:17:01 slyfox Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/mc/ChangeLog,v 1.233 2011/12/15 17:20:44 slyfox Exp $
+
+  15 Dec 2011; Sergei Trofimovich <slyfox@gentoo.org> -mc-4.7.5.3.ebuild,
+  -mc-4.8.0-r1.ebuild, -mc-4.8.0.ebuild:
+  Removed intermediate versions.
 
 *mc-4.8.1 (15 Dec 2011)
 *mc-4.7.5.6 (15 Dec 2011)
